# ebs-catalog

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: django.yml  flake8.yml  retry-error.yml  run_test.yml  tox.yml
apps/common/: models.py  parser.py  views.py
apps/common/fixtures/: categories.json  ultra_categories.json
apps/common/management/commands/: update_products.py
apps/common/parsers/: enter.py  foxmart.py  insert_db.py  partice.py
apps/products/: admin.py  gdg.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/products/fixtures/: categories.json
apps/products/migrations/: 0001_initial.py  0002_auto_20220908_1419.py  0002_auto_20220908_1743.py  0002_auto_20220923_1021.py  0002_auto_20220926_1116.py  0002_initial.py  0002_remove_comment_email_remove_comment_username_and_more.py  0002_rename_language_attachment_languages_and_more.py  0003_alter_brand_options_product_verified_and_more.py  0003_auto_20220908_1238.py  0003_auto_20220908_1708.py  0003_brand_attachments_comment_attachments.py  0003_shopproduct_category.py  0004_alter_attachment_options_alter_brand_options_and_more.py  0004_attachment_slug_brand_slug_category_slug_and_more.py  0004_rename_productshop_shopproduct.py  0005_alter_shopproduct_attachments.py  0006_alter_shopproduct_label.py  0006_alter_shopproduct_options.py  0007_alter_shopproduct_label.py  0008_alter_shopproduct_label.py  0009_merge_20221003_1332.py  0010_alter_shopproduct_options.py  0011_alter_shopproduct_options.py
apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username_and_more.py  0002_alter_customuser_options.py  0003_alter_customuser_options.py
config/: settings.py  urls.py
