[tool.poetry]
name = "ebscatalog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"
djangorestframework = "^3.13.1"
django-jazzmin = "^2.5.0"
drf-yasg = "^1.21.3"
psycopg2-binary = "^2.9.3"
django-auditlog = "^2.1.1"
django-json-widget = "^1.1.1"
beautifulsoup4 = "^4.11.1"
fake-useragent = "^0.1.11"
django-debug-toolbar = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
